<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoPermissionActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/citcall_logo_description"
        android:src="@drawable/logowhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:src="@drawable/baseline_report_gmailerrorred_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_required_title"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/bold"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_required_description"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/reguler"
            android:padding="10dp"/>
        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:textColor="@color/magenta"
            android:fontFamily="@font/bold"
            android:text="@string/btn_try_again"
            app:backgroundTint="@color/white"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="32dp"/>
    </LinearLayout>

</RelativeLayout>