<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNumberActivity">
    


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logowhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_input_phone_number"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/white"
            android:fontFamily="@font/bold"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/hint_edittext"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:color="@color/white"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundMode="outline"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textColor="@color/white"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnReqOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:textColor="@color/magenta"
            android:text="@string/btn_verify"
            app:backgroundTint="@color/white"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="32dp"
            android:visibility="visible"/>
        <ProgressBar
            android:id="@+id/phoneNumberProgressBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textAlignment="center"
            android:text="@string/req_otp_description"/>
    </LinearLayout>

</RelativeLayout>